add topic modeling
